--- a/source/decks_patios.html.erb
+++ b/source/decks_patios.html.erb
@@ -2,7 +2,7 @@
 title: Decks and Patios in the Bay Area
 ---
 
-<main id="decks_patios">
+<main id="decks_patios" class="decks_patios">
 	
 
 	<div class="section_wrapper">
