--- a/source/kitchen_remodeling.html.erb
+++ b/source/kitchen_remodeling.html.erb
@@ -2,7 +2,7 @@
 title: Kitchen Remodeling in the Bay Area
 ---
 
-<main id="kitchen">
+<main id="kitchen" class="kitchen">
 <div class="intro">
 	<h1 class="main_title">KITCHEN REMODELS & RENOVATIONS IN THE BAY AREA</h1>
 	<P>No other room in the house brings people together like a kithen.  Whether it's breakfast and waking up, making lunch for the day, cooking dinner together, or having a quiet snack at odd hours of the night, this room draws us to it like moths to a kitchen light.  Therefore it is no surprise that this is the most worked-on room in the house.  Kithen remodeling is one of the most popular remodeling and renovation projects in the contractor and construction world, and we have 40 plus years of turning this simple snack sanctruary into a delectable dining den.  Below is some of our handiwork.  Take a look and then give us a call to discuss what we can do for you!</P>
