--- a/source/testimonials.html.erb
+++ b/source/testimonials.html.erb
@@ -4,6 +4,38 @@ title: Testimonials
 <main id="testimonials">
 
 	<h2> THIS IS WHAT CUSTOMERS SAY ABOUT US </h2>
+
+	<p>
+		Leo was great to do business with. Very professional and great follow up. NOT pushy and intrusive. Yuri is a very skilled and polite craftsman. He fixed a leak, and the fix worked nicely. Leaks can be tricky things. And then they replaced a large patio door, and re-finished the entire frame. Very good job!
+		<br />
+		Tony Suhr in Millbrae, CA, 06/10/2016
+		<br />
+		Home Advisor Rating: 5 Stars
+	</p>
+	<p>
+		Leo and his team of professionals were outstanding, and worked extremely fast. Could not ask for more. One of the best contractors I've ever used in 35 years. Highly recommended.
+		<br />
+		Charles C., Portola Valley, CA, 10/19/2015
+		<br />
+		Home Advisor Rating: 5 Stars
+	</p>
+
+	<p>
+		Leo and his team did a great job on my front porch rebuild. Quick communication and quality construction work.
+		<br />
+		Pacifica, CA, 08/25/15
+		<br />
+		Home Advisor Rating: 5 Stars
+	</p>
+
+	<p>
+		If you need a new deck or balcony or to repair an old one anywhere in the San Francisco Bay Area, I enthusiastically recommend California Home Improvement Solutions for the job. Owner Leo Shneyer and his employees were professional, courteous and very efficient. I needed them to replace a small balcony off my second floor bedroom that needed to match the original design to conform to my HOA rules. Admittedly, a pretty simple job, but I was very impressed by their workmanship and efficiency. The new balcony is sturdy, well constructed and a big improvement on the old one in every way, with better lumber used than in the original construction. The experienced crew clearly knew exactly what they were doing. They cleaned up after themselves thoroughly when the work was done. I feel I got very good value for my money. If you've got a job you need done, you'll be in very capable hands with California Home Improvement Solutions. I'm very pleased and satisfied with their work.
+		<br />
+		Melissa H., Sunnyvale, CA, 08/06/2015
+		<br />
+		Home Advisor Rating: 5 Stars
+	</p>
+		
 	<p>
 		The quality of the work performed by California Home Improvement Solutions (CHIS) was excellent.  They exceeded my expectations in all regards. 
 		<br></br>
@@ -169,6 +201,8 @@ title: Testimonials
 		<br></br>
 		Home Advisor Rating: 5 Stars
 	</p>
+
+	
 
 	<p>
 		
