--- a/source/gallery.html.erb
+++ b/source/gallery.html.erb
@@ -1,78 +1,198 @@
 ---
-gallery
+title: gallery
 ---
 
-<main>
-	
-<div id="barstand-stacie" class="carousel slide" data-ride="carousel" data-interval="2000">
+<main id="gallery">
 
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="7"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="8"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="9"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="10"></li>
-  </ol>
+                                <!-- CABINETS 1 -->
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="..images/gallery/barstand-stacie/barstand-stacie_01tiny.jpg" alt="...">
-    </div>
- 	
- 	<div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_02tiny.jpg" alt="...">
+  <div id="cabinets-1" class="carousel slide carousel-sync" data-ride="carousel" data-pause="false">
+
+    <div class="carousel-inner">
+      <div class="gallery_carousel_img active item">
+        <img src="images/gallery/cabinets-1/cabinet1-1_before_900_tiny.jpg" alt="Cabinets 1 - Before">
+        <h3>CABINETS 1 - BEFORE</h3>
+      </div>
+
+      <div class="gallery_carousel_img item">
+        <img src="images/gallery/cabinets-1/cabinet1-2_after_900_tiny.jpg" alt="Cabinets 1 - After">
+        <h3>CABINETS 2 - AFTER</h3>
+      </div>
     </div>
 
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_03tiny.jpg" alt="...">
+    <a class="left carousel-control" href="#cabinets-1" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#cabinets-1" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+  </div>
+
+                                     <!-- CABINETS 2 -->
+
+  <div id="cabinets-2" class="carousel slide carousel-sync" data-ride="carousel" data-pause="false">
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="images/gallery/cabinets-2/cabinets2-1_before_900_tiny.jpg" alt="Cabinets 2 - Before">
+        <h3>CABINETS 2 - BEFORE</h3>
+      </div>
+
+      <div class="item">
+        <img src="images/gallery/cabinets-2/cabinets2-2_after_900_tiny.jpg" alt="Cabinets 2 - After">
+        <h3>CABINETS 2 - AFTER</h3>
+      </div>
     </div>
 
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_04tiny.jpg" alt="...">
+    <a class="left carousel-control" href="#cabinets-2" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#cabinets-2" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+  </div>
+
+                                    <!-- ADDITION 1 -->
+
+<div id="addition-1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="images/gallery/addition-1/addition1-1-before-900-tiny.jpg" alt="Addition 1 - Before">
+      <h3>ADDITION 1 - BEFORE</h3>
     </div>
 
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_05tiny.jpg" alt="...">
+    <div class="item">
+      <img src="images/gallery/addition-1/addition1-2-during-900-tiny.jpg" alt="Addition 2 - During">
+      <h3>ADDITION 1 - DURING</h3>
     </div>
 
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_06tiny.jpg" alt="...">
+    <div class="item">
+      <img src="images/gallery/addition-1/addition1-3-after-900-tiny.jpg" alt="Addition 3 - After">
+      <h3>ADDITION 1 - AFTER</h3>
+    </div>
+    
+  </div>
+
+  <a class="left carousel-control" href="#addition-1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#addition-1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+                                      <!-- ADDITION 2 -->
+
+<div id="addition-2" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/addition-2/addition2-1-before-900-tiny.jpg" alt="Home Addition - Before">
+      <h3>ADDITION 2 - BEFORE</h3>
     </div>
 
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_07tiny.jpg" alt="...">
-    </div>
-
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_08tiny.jpg" alt="...">
-    </div>
-
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_09tiny.jpg" alt="...">
-    </div>
-
-    <div class="item active">
-      <img src="images/gallery/barstand-stacie/barstand-stacie_10tiny.jpg" alt="...">
+    <div class="item">
+      <img src="images/gallery/addition-2/adition2-2-after-900-tiny.jpg" alt="Home Addition - After">
+      <h3>ADDITION 2 - AFTER</h3>
     </div>
   </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+  <a class="left carousel-control" href="#addition-2" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+  <a class="right carousel-control" href="#addition-2" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>
+                                  <!-- FOYER STAIRS -->
+
+<div id="foyer-stairs" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="images/gallery/foyer-stairs/foyer-stairs-1_1-before-900-tiny.jpg" alt="Foyer Stairs - Before">
+      <h3>FOYER STAIRS - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/foyer-stairs/foyer-stairs-1_2-during-900-tiny.jpg" alt="Foyer Stairs - During">
+      <h3>FOYER STAIRS - DURING</h3>
+    </div>
+    
+    <div class="item">
+      <img src="images/gallery/foyer-stairs/foyer-stairs-1_3-after-900-tiny.jpg" alt="Foyer Stairs - After">
+      <h3>FOYER STAIRS - AFTER</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/foyer-stairs/foyer-stairs-1_4-after-900-tiny.jpg" alt="Foyer Stairs - After">
+      <h3>FOYER STAIRS - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#foyer-stairs" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#foyer-stairs" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+                                  <!-- FOYER ENTRANCE -->
+
+<div id="foyer-entrance" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/foyer-entrance/foyer-entrance-1_1-before-900-tiny.jpg" alt="Foyer Entrance - Before">
+      <h3>FOYER ENTRANCE - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/foyer-entrance/foyer-entrance-1_2-after-900-tiny.jpg" alt="Foyer Entrance - After">
+      <h3>FOYER ENTRANCE - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#foyer-entrance" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#foyer-entrance" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+                                     <!-- VANITY 1 -->
+
+<div id="vanity-1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/vanity-1/vanity-1_1-before-900-tiny.jpg" alt="Vanity - Before">
+      <h3>VANITY 1 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/vanity-1/vanity-1_3-after-900-tiny.jpg" alt="Vanity - After">
+      <h3>VANITY 1 - AFTER</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/vanity-1/vanity-1_2-before-900-tiny.jpg" alt="Vanity - Before">
+      <h3>VANITY 1 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/vanity-1/vanity-1_4-after-900-tiny.jpg" alt="Vanity - After">
+      <h3>VANITY 1 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#vanity-1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#vanity-1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>                      
+
+
 
 </main>
