--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,22 +1,24 @@
 <!doctype html>
-
 <html>
   <head>
     <meta charset="utf-8">
 
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title %></title>
+    <title><%= current_page.data.title || "California Home Improvement Solutions" %></title>
 
-    <%= stylesheet_link_tag "bootstrap.min", "style" %>
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="/images/logos/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/images/logos/favicon.ico" type="image/x-icon">
   </head>
 
-  <body class="<%= page_classes %>">
-    
+  <body>
+
     <header>
       <nav class="navbar navbar-default navbar-fixed-top clearfix">
         <div class="container-fluid">
@@ -36,15 +38,18 @@
           <div class="collapse navbar-collapse gold" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">SERVICES<span class="caret"></span></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="/services.html" role="button" aria-expanded="false">SERVICES<span class="caret"></span></a>
+                <!-- SERVICES CLICKABLE ATTRIBUTES
+                 -->
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="/bathroom_remodeling.html">BATHROOM REMODELING in the Bay Area</a></li>
                   <li><a href="/kitchen_remodeling.html">KITCHEN REMODELING in the Bay Area</a></li>
                   <li><a href="/decks_patios.html">DECK and PATIO REPAIR in the Bay Area</a></li>
+                  <li><a href="/services.html">ALL SERVICES</a></li>
                   <!-- <li><a href="#">TILE in the Bay Area</a></li> -->
                 </ul>
               </li>
-             <!-- <li><a href="/gallery.html">GALLERY</a></li> -->
+              <li><a href="/gallery.html">GALLERY</a></li>
               <li><a href="/testimonials.html">TESTIMONIALS</a></li>
               <li><a href="/contact_us.html">CONTACT US</a></li>
             </ul>
@@ -53,52 +58,53 @@
       </nav>
 
       <!-- CAROUSEL -->
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="2500">
 
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-      <!-- WRAPPER FOR SLIDES -->
-        <div class="carousel-inner" role="listbox">
-          
+      <div id="carousel-header" class="carousel slide carousel-sync" data-ride="carousel" data-pause="false">
+        <div class="carousel-inner">
+        
           <div class="item active">
-            <img src="images/header/header_kitchen_remodeling_225x300_tiny.jpg" alt="Quality Remodeled Kitchen" width="300px" height="225px">
-            <div class="carousel-caption">
-              Kitchen Remodeling
-            </div>
+            <img src="images/header/header_kitchen_remodeling_300x449_tiny.jpg">
           </div>
 
           <div class="item">
-            <img src="images/header/header_bathroom_bathtub_yellow_225x300_tiny.jpg" alt="Quality Bathroom Remodeling" width="300px" height="225px">
-            <div class="carousel-caption">
-              Bathroom Remodeling
-            </div>
+            <img src="images/header/header_bathroom_bathtub_yellow_300x400_tiny.jpg">
           </div>
 
           <div class="item">
-            <img src="images/header/header_deck_tice_valley_225x300_tiny.jpg" alt="Quality Deck and Patio Remodeling" width="300px" height="225px">
-            <div class="carousel-caption">
-              Deck and Patio Remodeling
-            </div>
+            <img src="images/header/header_deck_tice_valley_300x400_tiny.jpg">
           </div>
+
+          <!-- <div class="item">
+            <img src="http://placehold.it/300x200/9b59b6/fff">
+          </div> -->
+
         </div>
-      </div>
 
+        <a class="left carousel-control" href="#carousel-header" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-header" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+
+      </div>
     </header>
 
-    <!-- <main> -->
     <%= yield %>
-
 
     <footer>
         <div class="cred">
 
           <a href="http://www.bbb.org/greater-san-francisco/business-reviews/contractors-general/california-home-improvement-solutions-in-san-francisco-ca-62529" target="_blank">
             <img src="images/logos/BBBA+.jpg" alt="A+ Rating on Better Business Bureau">
+          </a>
+
+          <a href="https://www.earthquakebracebolt.com/" target="_blank">
+          <img src="images/logos/ebb-logo.png" alt="Certified by Earthquake Brace + Bolt">
+          </a>
+
+          <a href="http://www.landlordstation.com/pros/vendors/california-home-improvement-solutions/" target="_blank">
+            <img src="images/logos/landlordStation.png" alt="Best of 2015 Vendor">
           </a>
 
           <a href="http://www.homeadvisor.com/rated.CaliforniaHome.6182699.html" target="_blank">
@@ -114,13 +120,13 @@
           </span>
 
         </div>
+        
     </footer>
 
-    <%= javascript_include_tag  "jquery-1.11.3.min" %>
-    <%= javascript_include_tag  "bootstrap.min" %>
-    <%= javascript_include_tag  "script" %>
-    
+    <script src="/javascripts/jquery-1.11.3.min.js" type="text/javascript"></script>
 
+    <script src="/javascripts/bootstrap.min.js" type="text/javascript"></script>
+
+    <script src="/javascripts/script.js" type="text/javascript"></script>
   </body>
-
 </html>
