houzz logo added

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -95,6 +95,9 @@
     <footer>
         <div class="cred">
 
+          <a href="http://www.houzz.com/pro/californiahomeimprovementsolutions/california-home-improvement-solutions"><img src="http://st.hzcdn.com/static/badge_26_9@2x.png" alt="Leo Shneyer in San Francisco, CA on Houzz">
+          </a>
+
           <a href="http://www.bbb.org/greater-san-francisco/business-reviews/contractors-general/california-home-improvement-solutions-in-san-francisco-ca-62529" target="_blank">
             <img src="images/logos/BBBA+.jpg" alt="A+ Rating on Better Business Bureau">
           </a>
