gallery massively updated

--- a/source/gallery.html.erb
+++ b/source/gallery.html.erb
@@ -160,27 +160,27 @@ title: gallery
   </a>
 </div>
 
-                                     <!-- VANITY 1 -->
+                                     <!-- CABINETS 1 -->
 
 <div id="vanity-1" class="carousel slide" data-ride="carousel" data-pause="false">
   <div class="carousel-inner">
     <div class="item active"> 
-      <img src="images/gallery/vanity-1/vanity-1_1-before-900-tiny.jpg" alt="Vanity - Before">
+      <img src="images/gallery/vanity-1/vanity-1_1-before-900-tiny.jpg" alt="cabinets - Before">
       <h3>VANITY 1 - BEFORE</h3>
     </div>
 
     <div class="item">
-      <img src="images/gallery/vanity-1/vanity-1_3-after-900-tiny.jpg" alt="Vanity - After">
+      <img src="images/gallery/vanity-1/vanity-1_3-after-900-tiny.jpg" alt="cabinets - Before">
       <h3>VANITY 1 - AFTER</h3>
     </div>
 
     <div class="item">
-      <img src="images/gallery/vanity-1/vanity-1_2-before-900-tiny.jpg" alt="Vanity - Before">
+      <img src="images/gallery/vanity-1/vanity-1_2-before-900-tiny.jpg" alt="cabinets - After">
       <h3>VANITY 1 - BEFORE</h3>
     </div>
 
     <div class="item">
-      <img src="images/gallery/vanity-1/vanity-1_4-after-900-tiny.jpg" alt="Vanity - After">
+      <img src="images/gallery/vanity-1/vanity-1_4-after-900-tiny.jpg" alt="cabinets - After">
       <h3>VANITY 1 - AFTER</h3>
     </div>
   </div>
@@ -191,8 +191,356 @@ title: gallery
   <a class="right carousel-control" href="#vanity-1" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
+</div>     
+
+                                 <!-- DRY ROT REPAIR 1 -->
+
+<div id="dry_rot_repair_1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/dry_rot_repair_1/dry_rot_repair_1_before_01_900x1200_tiny.jpg" alt="DRY ROT REPAIR 1 - BEFORE">
+      <h3>DRY ROT REPAIR 1- BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/dry_rot_repair_1/dry_rot_repair_1_during_02_900x1200_tiny.jpg" alt="DRY ROT REPAIR 1 - DURING">
+      <h3>DRY ROT REPAIR 1 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/dry_rot_repair_1/dry_rot_repair_1_after_03_900x1200_tiny.jpg" alt="DRY ROT REPAIR 1 - AFTER">
+      <h3>DRY ROT REPAIR 1 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#dry_rot_repair_1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#dry_rot_repair_1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
 </div>                      
 
+                                  <!-- DRY ROT REPAIR 2 -->
 
+<div id="dry_rot_repair_2" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/dry_rot_repair_2/dry_rot_repair_2-01_before_900_tiny.jpg" alt="DRY ROT REPAIR - BEFORE">
+      <h3>DRY ROT REPAIR - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/dry_rot_repair_2/dry_rot_repair_2-02_during_900_tiny.jpg" alt="DRY ROT REPAIR - DURING">
+      <h3>DRY ROT REPAIR - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/dry_rot_repair_2/dry_rot_repair_2-03_after_900_tiny.jpg" alt="DRY ROT REPAIR - AFTER">
+      <h3>DRY ROT REPAIR - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#dry_rot_repair_2" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#dry_rot_repair_2" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>     
+
+                                    <!-- MARBLE FLOOR -->
+
+<div id="marble_floor" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/marble_floor/marble_floor_1_before_900_tiny.jpg" alt="MARBLE FLOOR - BEFORE">
+      <h3>MARBLE FLOOR - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/marble_floor/marble_floor_2_after_900_tiny.jpg" alt="MARBLE FLOOR - AFTER">
+      <h3>MARBLE FLOOR - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#marble_floor" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#marble_floor" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>     
+
+                                       <!-- INTERIOR STAIRCASE -->
+
+<div id="interior_staircase_4" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/interior_staircase_4/interior_staircase_4-1_before_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE - BEFORE">
+      <h3>INTERIOR STAIRCASE - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_4/interior_staircase_4-2_during_900x1200.jpg" alt="INTERIOR STAIRCASE - DURING">
+      <h3>INTERIOR STAIRCASE - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_4/interior_staircase_4-3_after_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE - AFTER">
+      <h3>INTERIOR STAIRCASE - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#interior_staircase_4" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#interior_staircase_4" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>     
+
+
+                                    <!-- INTERIOR DOOR -->
+
+<div id="interior_door_2" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/interior_door_2/interior_door_2-1_before_900_tiny.jpg" alt="INTERIOR DOOR - BEFORE">
+      <h3>INTERIOR DOOR - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_door_2/interior_door_2-1_after_900_tiny.jpg" alt="INTERIOR DOOR - AFTER">
+      <h3>INTERIOR DOOR - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#interior_door_2" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#interior_door_2" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>   
+
+                                    <!-- CLOSET 1-->
+
+<div id="closets_1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item">
+      <img src="images/gallery/closets_1/closet1-1-before-900-tiny.jpg" alt="NEW CLOSET - AFTER">
+      <h3>NEW CLOSET - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/closets_1/closet1-3-after-900-tiny.jpg" alt="NEW CLOSET - AFTER">
+      <h3>NEW CLOSET - AFTER</h3>
+    </div>
+
+    <div class="item active"> 
+      <img src="images/gallery/closets_1/closet1-2-before-900-tiny.jpg" alt="NEW CLOSET - BEFORE">
+      <h3>NEW CLOSET - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/closets_1/closet1-4-after-900-tiny.jpg" alt="NEW CLOSET - AFTER">
+      <h3>NEW CLOSET - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#closets_1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#closets_1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>   
+
+
+                                    <!-- EXTERIOR STAIRCASE 1-->
+
+<div id="exterior_staircase" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item">
+      <img src="images/gallery/exterior_staircase/exterior_staircase_before_1_900x1200_tiny.jpg" alt="EXTERIOR STAIRCASE - BEFORE">
+      <h3>EXTERIOR STAIRCASE - BEFORE</h3>
+    </div>
+
+    <div class="item active"> 
+      <img src="images/gallery/exterior_staircase/exterior_staircase_before_2_900x1200_tiny.jpg" alt="EXTERIOR STAIRCASE - BEFORE">
+      <h3>EXTERIOR STAIRCASE - BEFORE</h3>
+    </div>
+
+    
+    <div class="item">
+      <img src="images/gallery/exterior_staircase/exterior_staircase_during_3_900x1200_tiny.jpg" alt="EXTERIOR STAIRCASE - DURING">
+      <h3>EXTERIOR STAIRCASE - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/exterior_staircase/exterior_staircase_after_6_900x1200_tiny.jpg" alt="EXTERIOR STAIRCASE - AFTER">
+      <h3>EXTERIOR STAIRCASE - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#exterior_staircase" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#exterior_staircase" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>   
+
+
+                                    <!-- RETAINING WALL 1-->
+
+<div id="retaining_wall_1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item">
+      <img src="images/gallery/retaining_wall_1/retaining_wall_1-2_before_900_tiny.jpg" alt="RETAINING WALL - AFTER">
+      <h3>RETAINING WALL - BEFORE</h3>
+    </div>
+
+    <div class="item active"> 
+      <img src="images/gallery/retaining_wall_1/retaining_wall_1-1_before_900_tiny.jpg" alt="RETAINING WALL - BEFORE">
+      <h3>RETAINING WALL - BEFORE</h3>
+    </div>
+
+    
+    <div class="item">
+      <img src="images/gallery/retaining_wall_1/retaining_wall_1-3_during_900_tiny.jpg" alt="RETAINING WALL - DURING">
+      <h3>RETAINING WALL - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/retaining_wall_1/retaining_wall_1-4_after_900_tiny.jpg" alt="RETAINING WALL - AFTER">
+      <h3>RETAINING WALL - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#retaining_wall_1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#retaining_wall_1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>   
+
+
+<!-- INTERIOR STAIRCASE 1-->
+
+<div id="interior_staircase_1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    
+    <div class="item active"> 
+      <img src="images/gallery/interior_staircase_1/interior_staircase_1-1_before_900_tiny.jpg" alt="INTERIOR STAIRCASE - BEFORE">
+      <h3>INTERIOR STAIRCASE - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_1/interior_staircase_1-2_during_900_tiny.jpg" alt="INTERIOR STAIRCASE - DURING">
+      <h3>INTERIOR STAIRCASE - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_1/interior_staircase_1-3_after_900_tiny.jpg" alt="INTERIOR STAIRCASE - AFTER">
+      <h3>INTERIOR STAIRCASE - AFTER</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_1/interior_staircase_1-4_after_900_tiny.jpg" alt="INTERIOR STAIRCASE - AFTER">
+      <h3>INTERIOR STAIRCASE - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#interior_staircase_1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#interior_staircase_1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>   
+
+
+                                    <!-- FIREPLACE 5-->
+
+<div id="fireplace_5" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/fireplace_5/fireplace_5-1_before_900_tiny.jpg" alt="FIREPLACE - BEFORE">
+      <h3>FIREPLACE - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/fireplace_5/fireplace_5-2_after_900_tiny.jpg" alt="FIREPLACE - AFTER">
+      <h3>FIREPLACE - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#fireplace_5" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#fireplace_5" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>   
+
+                                       <!-- DECKS 2 -->
+
+<div id="decks_2" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/deck_2/deck_2-1_before_900_tiny.jpg" alt="DECKS 2 - BEFORE">
+      <h3>DECKS 2 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/deck_2/deck_2-2_during_900_tiny.jpg" alt="DECKS 2 - DURING">
+      <h3>DECKS 2 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/deck_2/deck_2-3_after_900_tiny.jpg" alt="DECKS 2 - AFTER">
+      <h3>DECKS 2 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#decks_2" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#decks_2" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>    
+
+
+                                       <!-- DECKS 5 -->
+
+<div id="decks_5" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/decks_5/decks_5-1_before_900x1200_tiny.jpg" alt="DECKS 5 - BEFORE">
+      <h3>DECKS 5 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/decks_5/decks_5-2_during_900x1200_tiny.jpg" alt="DECKS 5 - DURING">
+      <h3>DECKS 5 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/decks_5/decks_5-2_during_900x1200_tiny.jpg" alt="DECKS 5 - AFTER">
+      <h3>DECKS 5 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#decks_5" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#decks_5" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>    
 
 </main>
