finished CHIS imports 9.8.16

--- a/source/gallery.html.erb
+++ b/source/gallery.html.erb
@@ -3,6 +3,45 @@ title: gallery
 ---
 
 <main id="gallery">
+                                       
+                                       <!-- INTERIOR STAIRCASE 3 -->
+
+<div id="interior_staircase_3" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    
+    <div class="item">
+      <img src="images/gallery/interior_staircase_3/interior_staircase_3-2_before_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 3 - BEFORE">
+      <h3>INTERIOR STAIRCASE 3 - BEFORE</h3>
+    </div>
+
+    <div class="item active"> 
+      <img src="images/gallery/interior_staircase_3/interior_staircase_3-1_before_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 3 - BEFORE">
+      <h3>INTERIOR STAIRCASE 3 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_3/interior_staircase_3-4_during_900_tiny.jpg" alt="INTERIOR STAIRCASE 3 - DURING">
+      <h3>INTERIOR STAIRCASE 3 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_3/interior_staircase_3-9_after_900_tiny.jpg" alt="INTERIOR STAIRCASE 3 - AFTER">
+      <h3>INTERIOR STAIRCASE 3 - AFTER</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_3/interior_staircase_3-11_after_900_tiny.jpg" alt="INTERIOR STAIRCASE 3 - AFTER">
+      <h3>INTERIOR STAIRCASE 3 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#interior_staircase_3" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#interior_staircase_3" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>  
 
                                 <!-- CABINETS 1 -->
 
@@ -542,5 +581,277 @@ title: gallery
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>    
+
+                                       <!-- INTERIOR STAIRCASE 5 -->
+
+<div id="interior_staircase_5" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    
+    <div class="item">
+      <img src="images/gallery/interior_staircase_5/interior_staircase_5-1_before_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 5 - BEFORE">
+      <h3>INTERIOR STAIRCASE 5 - BEFORE</h3>
+    </div>
+
+    <div class="item active"> 
+      <img src="images/gallery/interior_staircase_5/interior_staircase_5-4_during_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 5 - DURING">
+      <h3>INTERIOR STAIRCASE 5 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_5/interior_staircase_5-5_after_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 5 - AFTER">
+      <h3>INTERIOR STAIRCASE 5 - AFTER</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_5/interior_staircase_5-2_before_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 5 - BEFORE">
+      <h3>INTERIOR STAIRCASE 5 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_5/interior_staircase_5-3_during_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 5 - DURING">
+      <h3>INTERIOR STAIRCASE 5 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_5/interior_staircase_5-6_after_900x1200_tiny.jpg" alt="INTERIOR STAIRCASE 5 - AFTER">
+      <h3>INTERIOR STAIRCASE 5 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#interior_staircase_5" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#interior_staircase_5" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div> 
+
+                                  <!-- FIREPLACE 2 -->
+
+<div id="fireplace_2" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/fireplace_2/fireplace_2-1_before_900_tiny.jpg" alt="FIREPLACE 2 - Before">
+      <h3>FIREPLACE 2 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/fireplace_2/fireplace_2-2_after_900_tiny.jpg" alt="FIREPLACE 2 - After">
+      <h3>FIREPLACE 2 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#fireplace_2" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#fireplace_2" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+                                      <!-- DECK 3 -->
+
+<div id="deck_3" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/deck_3/deck_3-1_before_900_tiny.jpg" alt="DECK 3 - BEFORE">
+      <h3>DECK 3 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/deck_3/deck_3-3_during_900_tiny.jpg" alt="DECK 3 - DURING">
+      <h3>DECK 3 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/deck_3/deck_3-2_during_900_tiny.jpg" alt="DECK 3 - DURING">
+      <h3>DECK 3 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/deck_3/deck_3-4_after_900_tiny.jpg" alt="DECK 3 - AFTER">
+      <h3>DECK 3 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#deck_3" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#deck_3" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>   
+
+
+                                      <!-- DECK 4 -->
+
+<div id="deck_4" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+    <div class="item active"> 
+      <img src="images/gallery/deck_4/deck_4-1_during_900_tiny.jpg" alt="DECK 4 - DURING">
+      <h3>DECK 4 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/deck_4/deck_4-2_during_900_tiny.jpg" alt="DECK 4 - DURING">
+      <h3>DECK 4 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/deck_4/deck_4-3_after_900_tiny.jpg" alt="DECK 4 - AFTER">
+      <h3>DECK 4 - AFTER</h3>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#deck_4" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#deck_4" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>    
+
+                                   <!-- DRY ROT REPAIR -->
+
+<div id="dry_rot_repair" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="images/gallery/dry_rot_repair/dry_rot_repair_1-1_before_900x1200_tiny.jpg" alt="DRY ROT REPAIR - BEFORE">
+      <h3>DRY ROT REPAIR - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/dry_rot_repair/dry_rot_repair_1-2_during_900x1200_tiny.jpg" alt="DRY ROT REPAIR - DURING">
+      <h3>DRY ROT REPAIR - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/dry_rot_repair/dry_rot_repair_0-3_after_900x1200_tiny.jpg" alt="DRY ROT REPAIR - AFTER">
+      <h3>DRY ROT REPAIR - AFTER</h3>
+    </div>
+    
+  </div>
+
+  <a class="left carousel-control" href="#dry_rot_repair" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#dry_rot_repair" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+
+                                   <!-- FIREPLACE 1 -->
+
+<div id="fireplace_1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="images/gallery/fireplace_1/fireplace_1-1_before_900_tiny.jpg" alt="FIREPLACE 1 - BEFORE">
+      <h3>FIREPLACE 1 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/fireplace_1/fireplace_1-2_during_900_tiny.jpg" alt="FIREPLACE 1 - DURING">
+      <h3>FIREPLACE 1 - DURING</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/fireplace_1/fireplace_1-3_after_900_tiny.jpg" alt="FIREPLACE 1 - AFTER">
+      <h3>FIREPLACE 1 - AFTER</h3>
+    </div>
+    
+  </div>
+
+  <a class="left carousel-control" href="#fireplace_1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#fireplace_1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+                                   <!-- FLOOR 1 -->
+
+<div id="floor_1" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="images/gallery/floor_1/floor_1-1_before_900_tiny.jpg" alt="FLOOR 1 - BEFORE">
+      <h3>FLOOR 1 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/floor_1/floor_1-2_after_900_tiny.jpg" alt="FLOOR 1 - AFTER">
+      <h3>FLOOR 1 - AFTER</h3>
+    </div>
+    
+  </div>
+
+  <a class="left carousel-control" href="#floor_1" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#floor_1" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+
+                                   <!-- FLOOR 3 -->
+
+<div id="floor_3" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="images/gallery/floor_3/floor_3-1_before_900_tiny.jpg" alt="FLOOR 3 - BEFORE">
+      <h3>FLOOR 3 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/floor_3/floor_3-2_after_900_tiny.jpg" alt="FLOOR 3 - AFTER">
+      <h3>FLOOR 3 - AFTER</h3>
+    </div>
+    
+  </div>
+
+  <a class="left carousel-control" href="#floor_3" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#floor_3" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+
+                                  <!-- INTERIOR STAIRCASE 2 -->
+
+<div id="interior_staircase_2" class="carousel slide" data-ride="carousel" data-pause="false">
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="images/gallery/interior_staircase_2/interior_staircase_2-1_before_900_tiny.jpg" alt="INTERIOR STAIRCASE 2 - BEFORE">
+      <h3>INTERIOR STAIRCASE 2 - BEFORE</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_2/interior_staircase_2-2_after_900_tiny.jpg" alt="INTERIOR STAIRCASE 2 - AFTER">
+      <h3>INTERIOR STAIRCASE 2 - AFTER</h3>
+    </div>
+
+    <div class="item">
+      <img src="images/gallery/interior_staircase_2/interior_staircase_2-3_after_900_tiny.jpg" alt="INTERIOR STAIRCASE 2 - AFTER">
+      <h3>INTERIOR STAIRCASE 2 - AFTER</h3>
+    </div>
+    
+  </div>
+
+  <a class="left carousel-control" href="#interior_staircase_2" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#interior_staircase_2" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
 
 </main>
