--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,12 +3,18 @@ title: California Home Improvement Solutions
 ---
 
  <!-- <main> -->
+<h1 class="about-us">Welcome to our website</h1>
+
+	<p>
+		Below you'll find a description about us, our history, and our values.  But if you don't want to read a bunch, you can just check out our <a class="orange_gallery" href="www.chisconstruction.com/gallery.html">GALLERY</a>.  It's not all of the work we've ever done by far, but it illustrates the range we are capable of executing excellently.
+	</p>
+
 <article id="about_us" class="about-us white_writing em_2">
 
-	<h1 class="gold">About Us</h1>
+	<h1>About Us</h1>
 	<p>
 		With over 40 years experience, 15 years on the honor roll at the Better Business Bureau, named best of CitySearch in the Bay Area, and rated 9.6 out of 10 by construction magazines, we at California Home Improvement Solutions Inc. are here to help you create your dream home.
-	​        </p>
+	​</p>
 	<p>
 		​​​Offering a wide range of services in everything from foundation to framing, from electrical to plumbing, from sheet rock to complete finish including painting, tile, fine carpentry, and flooring, we 	guarantee quality construction and renovation to your home.
 	​</p>
