--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,10 +3,12 @@ title: California Home Improvement Solutions
 ---
 
  <!-- <main> -->
+
 <h1 class="about-us">Welcome to our website</h1>
 
 	<p>
 		Below you'll find a description about us, our history, and our values.  But if you don't want to read a bunch, you can just check out our <a class="orange_gallery" href="www.chisconstruction.com/gallery.html">GALLERY</a>.  It's not all of the work we've ever done by far, but it illustrates the range we are capable of executing excellently.
+		As you think about improvements to your home, keep in mind that in this uncertain economy, the best investment you can make is into your home.  Kitchen and Bathroom remodeling typically raises the value of your house by more than you spend on the remodel.
 	</p>
 
 <article id="about_us" class="about-us white_writing em_2">
