removed BBB wording

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ title: California Home Improvement Solutions
 		As you think about improvements to your home, keep in mind that in this uncertain economy, the best investment you can make is into your home.  Kitchen and Bathroom remodeling typically raises the value of your house by more than you spend on the remodel.
 	</p>
 	<p>
-		With over 40 years experience, 15 years on the honor roll at the Better Business Bureau, named best of CitySearch in the Bay Area, and rated 9.6 out of 10 by construction magazines, we at California Home Improvement Solutions Inc. are here to help you create your dream home.
+		With over 40 years experience, named best of CitySearch in the Bay Area, and rated 9.6 out of 10 by construction magazines, we at California Home Improvement Solutions Inc. are here to help you create your dream home.
 	​</p>
 	<p>
 		​​​Offering a wide range of services in everything from foundation to framing, from electrical to plumbing, from sheet rock to complete finish including painting, tile, fine carpentry, and flooring, we 	guarantee quality construction and renovation to your home.
